@@ -15,15 +15,14 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
  *******************************************************************************/
-package org.jzy3d.demos.surface;
-
+package org.jzy3d.demos.embedded;
 import java.lang.foreign.MemorySession;
 import java.lang.foreign.SegmentAllocator;
 import java.lang.foreign.ValueLayout;
 import org.jzy3d.chart.Chart;
 import org.jzy3d.chart.factories.ChartFactory;
 import org.jzy3d.chart.factories.PanamaGLChartFactory;
-import org.jzy3d.chart.factories.PanamaGLPainterFactory_Ubuntu_20_04;
+import org.jzy3d.chart.factories.embedded.EmbeddedPanamaGLPainterFactory;
 import org.jzy3d.colors.Color;
 import org.jzy3d.colors.ColorMapper;
 import org.jzy3d.colors.colormaps.ColorMapRainbow;
@@ -33,57 +32,57 @@ import org.jzy3d.plot3d.builder.SurfaceBuilder;
 import org.jzy3d.plot3d.builder.concrete.OrthonormalGrid;
 import org.jzy3d.plot3d.primitives.Shape;
 import org.jzy3d.plot3d.rendering.canvas.Quality;
-import opengl.ubuntu.v20.glut_h;
+import com.jogamp.opengl.GLProfile;
+import opengl.macos.v10_15_7.glut_h;
+
 
 
 /**
  * Demo an surface chart made with Panama (JEP-412).
  *
  * @author Martin Pernollet
- * 
- * --enable-native-access=ALL-UNNAMED --enable-preview -Djava.library.path=.:/usr/lib/x86_64-linux-gnu/
  *
  */
-public class SurfaceDemoPanamaGL_Ubuntu {
+//VM ARGS : -XstartOnFirstThread --enable-preview -Djava.library.path=.:/System/Library/Frameworks/OpenGL.framework/Versions/Current/Libraries/
+
+public class SurfaceDemoPanamaGL_macOS_embedded {
+  static {
+    jogamp.nativewindow.jawt.JAWTUtil_ a;
+  }
 
   static final float ALPHA_FACTOR = 0.55f;// .61f;
 
   public static void main(String[] args) {
-      // loading GL manually
-      System.loadLibrary("GL");
-      //System.loadLibrary("GL");
-      //System.load("/System/Library/Frameworks/GLUT.framework/Versions/Current/GLUT");
+    //GLProfile.initSingleton();
+    
+ // loading GL manually
+    System.loadLibrary("GL");
+    System.load("/System/Library/Frameworks/GLUT.framework/Versions/Current/GLUT");
 
-      // https://github.com/jzy3d/panama-gl/issues/16
-      var scope = MemorySession.openConfined();
-      var allocator = SegmentAllocator.newNativeArena(scope);
-      var argc = allocator.allocate(ValueLayout.JAVA_INT, 0);
-      glut_h.glutInit(argc, argc);
+    // https://github.com/jzy3d/panama-gl/issues/16
+    var scope = MemorySession.openConfined();
+    var allocator = SegmentAllocator.newNativeArena(scope);
+    var argc = allocator.allocate(ValueLayout.JAVA_INT, 0);
+    glut_h.glutInit(argc, argc);
+    
 
+    // https://github.com/jzy3d/panama-gl/issues/16
+    /*var scope = MemorySession.openConfined();
+    var allocator = SegmentAllocator.newNativeArena(scope);
+    var argc = allocator.allocate(ValueLayout.JAVA_INT, 0);
+    glut_h.glutInit(argc, argc);*/
     
     // ------------------------
 
-    Shape surface = surface();
-
-    /**
-     * In case the below factory is not working, one can use CPU rendering fallback as follow
-     * <code>
-     * ChartFactory factory = new EmulGLChartFactory(); // use me as a reference
-     * </code>
-     *
-     * @see https://github.com/jzy3d/jzy3d-api/blob/master/jzy3d-tutorials/src/main/java/org/jzy3d/demos/surface/SurfaceDemoEmulGL.java
-     */
-    //ChartFactory factory = new PanamaGLChartFactory(new PanamaGLPainterFactory_MacOS_10_15_3());
-    //ChartFactory factory = new PanamaGLChartFactory(new PanamaGLPainterFactory_MacOS_11_4());
-    ChartFactory factory = new PanamaGLChartFactory(new PanamaGLPainterFactory_Ubuntu_20_04());
+    ChartFactory factory = new PanamaGLChartFactory(new EmbeddedPanamaGLPainterFactory());
 
     Quality q = Quality.Advanced();
     Chart chart = factory.newChart(q);
     chart.add(surface());
 
     // Manual HiDPI setting
-    //float[] pixelScale = {2f,2f};
-    //chart.getCanvas().setPixelScale(pixelScale);
+    float[] pixelScale = {2f,2f};
+    chart.getCanvas().setPixelScale(pixelScale);
 
     chart.open(800,600);
     // with GLUT, can't do anything after open until main loop ends
