@@ -15,21 +15,37 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
  *******************************************************************************/
-package org.jzy3d.demos.scatter;
+package org.jzy3d.demos.natives;
 
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.ValueLayout;
 import java.util.Random;
 import org.jzy3d.chart.Chart;
 import org.jzy3d.chart.factories.IChartFactory;
 import org.jzy3d.chart.factories.PanamaGLChartFactory;
-import org.jzy3d.chart.factories.PanamaGLPainterFactory_MacOS_10_15_3;
+import org.jzy3d.chart.factories.natives.PanamaGLPainterFactory_MacOS_10_15_3;
 import org.jzy3d.colors.Color;
 import org.jzy3d.maths.Coord3d;
 import org.jzy3d.plot3d.primitives.Scatter;
 import org.jzy3d.plot3d.rendering.canvas.Quality;
+import opengl.macos.v10_15_7.glut_h;
 
-// -XstartOnFirstThread --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign -Djava.library.path=.:/System/Library/Frameworks/OpenGL.framework/Versions/Current/Libraries/
-public class ScatterDemoPanamaGL  {
+// -XstartOnFirstThread --enable-preview -Djava.library.path=.:/System/Library/Frameworks/OpenGL.framework/Versions/Current/Libraries/
+public class ScatterDemoPanamaGL_macOS  {
   public static void main(String[] args) {
+    
+ // loading GL manually
+    System.loadLibrary("GL");
+    System.load("/System/Library/Frameworks/GLUT.framework/Versions/Current/GLUT");
+
+    // https://github.com/jzy3d/panama-gl/issues/16
+    var scope = MemorySession.openConfined();
+    var allocator = SegmentAllocator.newNativeArena(scope);
+    var argc = allocator.allocate(ValueLayout.JAVA_INT, 0);
+    glut_h.glutInit(argc, argc);
+    
+    
     IChartFactory f = new PanamaGLChartFactory(new PanamaGLPainterFactory_MacOS_10_15_3());
     Chart chart = f.newChart(Quality.Advanced());
     chart.add(scatter());
@@ -38,7 +54,7 @@ public class ScatterDemoPanamaGL  {
     float[] pixelScale = {2f,2f};
     chart.getCanvas().setPixelScale(pixelScale);
 
-    chart.open(800,600);
+    chart.open("Native window", 800,600);
   }
 
   private static Scatter scatter() {
